# inverse_source_project

./: .gitignore  README.md  __init__.py  aggregate_comparison_results.py  aggregate_perturbation_results.py  aggregate_results.py  aggregate_rmse_truncated_results.py  aggregate_statistical_results.py  aggregate_summary.json  analytical_solver.py  assemble_logs.py  assemble_results.py  assembled_logs.json  assembled_results.json  bem_solver.py  cleanup_package.sh  cli.py  comparison.py  config.json  config.py  deploy.txt  environment.yml  fix_transition_detection.py  generate_comparison_slurm.py  generate_perturbation_slurm.py  generate_rmse_truncated_conformal_slurm.py  generate_rmse_truncated_slurm.py  generate_slurm_jobs.py  generate_statistical_slurm.py  generate_statistical_slurm_multidomain.py  main.tex  mesh.py  mesh_convergence.py  parameter_study.py  pyproject.toml  requirements.txt  rmse_truncated_summary_brain_general_random_intensity.json  rmse_truncated_summary_disk_general_random_intensity.json  rmse_truncated_summary_ellipse_general_random_intensity.json  rmse_truncated_summary_general_random_intensity.json  (+5 more)
Config/: config.json  config.yaml  config_template.json
docs/: main.tex  references.bib  session_summary_2025-12-25.md  session_summary_2025-12-27.md  session_summary_2026-01-01.md
examples/: complete_example.py
linear_methods_publication/: README.md  generate_boundary_bias_figures.py  generate_slurm_jobs.py  latex_boundary_bias_section.tex
linear_methods_publication/src/: __init__.py  depth_weighted_solvers.py
meshes/: circle_domain.msh  custom_domain.msh
notebooks/: 01_forward_solver_demo.ipynb
results/run_aaa02399/: params.json  results.json
results/run_c74b3a85/: params.json  results.json
results/run_e9fb8cd0/: params.json  results.json
results/run_polygon_5cc598ac/: params.json  results.json
src/: BUG_REPORT.md  README.md  __init__.py  __main__.py  analytical_solver.py  analyze_disk_local_minima.py  analyze_local_minima.py  bem_solver.py  calibration.py  check_brain_diff.py  cli.py  compare_sensors.py  comparison.py  comprehensive_solver_test.py  comprehensive_test_v1.py  config.json  config.py  config.yaml  conformal_bem.py  conformal_solver.py  debug_all_methods.py  debug_comparison.py  deep_diagnostic.py  depth_weighted_solvers.py  diagnose_ellipse.py  diagnose_ellipse_bounds.py  diagnose_ellipse_multimodal.py  diagnose_fem_performance.py  diagnose_nonlinear_failures.py  diagnose_solver_comparison.py  diagnose_square_fem.py  diagnose_star_conformal.py  diagnose_three_failures.py  domains.py  experiment_tracker.py  fem_solver.py  forward_solver.py  generate_boundary_bias_figures_v2.py  generate_comparison.py  inverse_solver.py  (+79 more)
src/comparison_results/: summary_results.txt
src/docs/: CHANGES_SUMMARY.md  MIGRATION_GUIDE.md  VISUALIZATION_TOOLBOX_SPEC.md  mathematical_formulation.tex  mathematical_formulation_part1.tex  mathematical_formulation_part2.tex  mathematical_formulation_part3.tex  requirements.txt  session_summary_2026-01-01.md  session_summary_2026-01-16.md  session_summary_2026_01_12_continued.md
src/results/compare_all_20260113_144158/: summary.json
src/results_brain_2705baa1/: summary_brain.txt
src/results_brain_282e678d/: summary_brain.txt
src/results_brain_4aa7e515/: summary_brain.txt
src/results_brain_95aae2ba/: summary_brain.txt
src/results_brain_ec622ffc/: summary_brain.txt
src/results_disk_031898c7/: summary_disk.txt
src/results_disk_56247475/: summary_disk.txt
src/results_disk_606bf382/: summary_disk.txt
src/results_disk_74591fd4/: summary_disk.txt
src/results_disk_b2524403/: summary_disk.txt
src/results_ellipse_46719c7a/: summary_ellipse.txt
src/results_ellipse_53168b07/: summary_ellipse.txt
src/results_ellipse_9b0ebb3b/: summary_ellipse.txt
src/results_ellipse_b1763899/: summary_ellipse.txt
src/results_ellipse_c4af8498/: summary_ellipse.txt
src/visualization/: __init__.py  animation.py  barrier_viz.py  config.py  conformal_viz.py  dashboard.py  forward_viz.py  greens_viz.py  inverse_viz.py  optimization_live.py  optimization_viz.py  test_all_visualizations.py  utils.py
tests/: test_forward_solver.py
