[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse-source"
version = "0.1.0"
description = "Inverse source localization from boundary measurements using FEniCSx"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["inverse problems", "PDE", "FEM", "source localization", "FEniCSx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "gmsh>=4.12",
    "meshio>=5.3",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "pylint",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
jupyter = [
    "jupyterlab>=4.0",
    "ipykernel",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/yourusername/inverse-source"
Documentation = "https://github.com/yourusername/inverse-source#readme"
Repository = "https://github.com/yourusername/inverse-source"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]  # Missing docstrings

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
