[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse-source"
version = "0.1.0"
description = "Inverse source localization from boundary measurements using BEM and FEM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Serdan", email = "your.email@example.com"}
]
keywords = ["inverse problems", "PDE", "FEM", "BEM", "source localization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "gmsh>=4.12",
    "meshio>=5.3",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "pylint",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
jupyter = [
    "jupyterlab>=4.0",
    "ipykernel",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/Shaerdan/inverse_source_project"
Documentation = "https://github.com/Shaerdan/inverse_source_project#readme"
Repository = "https://github.com/Shaerdan/inverse_source_project"

[project.scripts]
inverse-source = "inverse_source.cli:main"

[tool.setuptools]
packages = ["inverse_source"]
package-dir = {"inverse_source" = "src"}

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
