[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse-source"
version = "0.8.0"
description = "Inverse source localization for acoustic point sources using conformal mapping, FEM, and BEM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Serdan", email = "serdan@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["inverse problems", "source localization", "conformal mapping", "FEM", "BEM", "acoustics"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Full installation with all solvers
full = [
    "cvxpy>=1.4",
    "ecos>=2.0",
    "scikit-learn>=1.3",
    "gmsh>=4.12",
    "meshio>=5.3",
    "h5py>=3.9",
    "pyvista>=0.42",
    "tqdm",
]
# FEM solver (requires FEniCSx - install via conda)
fem = [
    "gmsh>=4.12",
    "meshio>=5.3",
    "h5py>=3.9",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
# Jupyter/notebook support
notebook = [
    "jupyterlab>=4.0",
    "ipykernel",
    "ipywidgets",
]

[project.scripts]
inverse-source = "inverse_source.cli:main"

[project.urls]
Homepage = "https://github.com/Shaerdan/inverse_source_project"
Documentation = "https://github.com/Shaerdan/inverse_source_project#readme"
Repository = "https://github.com/Shaerdan/inverse_source_project"
Issues = "https://github.com/Shaerdan/inverse_source_project/issues"

[tool.setuptools]
packages = ["inverse_source", "inverse_source.visualization"]
package-dir = {"inverse_source" = "src", "inverse_source.visualization" = "src/visualization"}

[tool.setuptools.package-data]
inverse_source = ["*.yaml", "*.json"]

# Black formatter configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | \.eggs
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
